# plinth

./: .gitignore  LICENSE  NEXT-STEPS.md  Plinth.fsproj  README.md  build.cmd  dev.ps1  index.html  package-lock.json  package.json  vite.config.js
landing/: index.html
src/: devMock.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  link_parser.rs  main.rs  note_index.rs
src/Plinth/: App.fs  Tauri.fs  Types.fs
src/Plinth/Components/: Backlinks.fs  Editor.fs  Graph.fs  Palette.fs  Search.fs  Settings.fs  Sidebar.fs
src/Plinth/Hooks/: UseNotes.fs  UseSearch.fs  UseSettings.fs
src/Plinth/Pages/: NoteView.fs
src/Plinth/Utils/: Date.fs  Markdown.fs
