[package]
name = "plinth"
version = "0.2.0"
description = "Local-first markdown knowledge base"
edition = "2021"

[lib]
name = "plinth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
